feat: migrate eth -> ace

--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -7,11 +7,11 @@ global:
 alerting:
   alertmanagers:
     - static_configs:
-      - targets: ['alertmanager:9093']
+        - targets: ['alertmanager:9093']
 
 rule_files:
-  - "operators_map.yml"
-  - "alerts_rules.yml"
+  - 'operators_map.yml'
+  - 'alerts_rules.yml'
 
 scrape_configs:
   - job_name: 'cadvisor'
@@ -22,11 +22,11 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'ethereum_validators_monitoring'
+  - job_name: 'catalist_validators_monitoring'
     static_configs:
-      - targets: ['ethereum-validators-monitoring:8080']
+      - targets: ['catalist-validators-monitoring:8080']
     metric_relabel_configs:
-      - source_labels: [ nos_module_id, nos_id ]
+      - source_labels: [nos_module_id, nos_id]
         regex: '(\d+);(\d+)'
         replacement: ${1};${2}
         target_label: nos_global_index
