--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.7'
+version: '1.0'
 services:
   clickhouse:
     image: yandex/clickhouse-server
     container_name: clickhouse
     restart: unless-stopped
     environment:
-      - CLICKHOUSE_USER=default
-      - CLICKHOUSE_PASSWORD=
-      - CLICKHOUSE_DB=default
+      - CLICKHOUSE_USER=${DB_USER}
+      - CLICKHOUSE_PASSWORD=${DB_PASSWORD}
+      - CLICKHOUSE_DB=${DB_NAME}
     deploy:
       resources:
         limits:
@@ -22,7 +22,7 @@ services:
         hard: 262144
     hostname: clickhouse
     ports:
-      - "8123:8123"
+      - '8123:8123'
     volumes:
       - ./.volumes/clickhouse:/var/lib/clickhouse
 
@@ -40,9 +40,9 @@ services:
     container_name: clickhouse-tabix-web-client
     restart: always
     ports:
-      - "8081:80"
+      - '8081:80'
     environment:
-      - CH_HOST=clickhouse:8123
+      - CH_HOST=clickhouse:${DB_PORT}
 
   prometheus:
     image: prom/prometheus:latest
@@ -61,7 +61,7 @@ services:
     expose:
       - 9090
     ports:
-      - "0.0.0.0:9090:9090/tcp"
+      - '0.0.0.0:9090:9090/tcp'
 
   cadvisor:
     image: 'zcube/cadvisor:latest'
@@ -90,7 +90,7 @@ services:
     expose:
       - 9093
     ports:
-      - "0.0.0.0:9093:9093/tcp"
+      - '0.0.0.0:9093:9093/tcp'
 
   alertmanager-discord:
     image: lidofinance/alertmanager-discord:2.7.0
@@ -103,7 +103,7 @@ services:
     expose:
       - 9094
     ports:
-      - "0.0.0.0:9094:9094/tcp"
+      - '0.0.0.0:9094:9094/tcp'
     volumes:
       - ./docker/alertmanager-discord/alertmanager-discord.yml:/etc/alertmanager-discord.yml
 
@@ -135,17 +135,16 @@ services:
       - GF_SMTP_FROM_ADDRESS=myaddress@gmail.com
       - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=vertamedia-clickhouse-datasource
       - GF_INSTALL_PLUGINS=vertamedia-clickhouse-datasource
-      - CLICKHOUSE_DB_HOST=http://clickhouse
-      - CLICKHOUSE_DB_PORT=8123
-      - CLICKHOUSE_DB_USER=default
-      - CLICKHOUSE_DB_PASSWORD=
-      - CLICKHOUSE_DB_NAME=default
+      - CLICKHOUSE_DB_HOST=${DB_HOST}
+      - CLICKHOUSE_DB_PORT=${DB_PORT}
+      - CLICKHOUSE_DB_USER=${DB_USER}
+      - CLICKHOUSE_DB_PASSWORD=${DB_PASSWORD}
+      - CLICKHOUSE_DB_NAME=${DB_NAME}
     ports:
-      - "8082:3000"
+      - '8082:3000'
 
   app:
-    build: ./
-    container_name: ethereum-validators-monitoring
+    image: blockarchivelabs/catalist-validators-monitoring:latest
     restart: unless-stopped
     deploy:
       resources:
@@ -162,15 +161,15 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - LOG_FORMAT=${LOG_FORMAT:-json}
       - HTTP_PORT=${HTTP_PORT:-8080}
-      - DB_HOST=http://clickhouse
-      - DB_PORT=8123
-      - DB_USER=default
-      - DB_PASSWORD=
-      - DB_NAME=default
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
       - DB_MAX_RETRIES=${DB_MAX_RETRIES:-10}
       - DB_MIN_BACKOFF_SEC=${DB_MIN_BACKOFF_SEC:-1}
       - DB_MAX_BACKOFF_SEC=${DB_MAX_BACKOFF_SEC:-120}
-      - START_EPOCH=${START_EPOCH:-155000}
+      - START_EPOCH=${START_EPOCH:-10000}
       - ETH_NETWORK=${ETH_NETWORK}
       - VALIDATOR_REGISTRY_SOURCE=${VALIDATOR_REGISTRY_SOURCE:-lido}
       - VALIDATOR_REGISTRY_FILE_SOURCE_PATH=${VALIDATOR_REGISTRY_FILE_SOURCE_PATH:-./docker/validators/custom_mainnet.yaml}
@@ -196,9 +195,9 @@ services:
       - CRITICAL_ALERTS_MIN_VAL_COUNT=${CRITICAL_ALERTS_MIN_VAL_COUNT:-100}
       - CRITICAL_ALERTS_ALERTMANAGER_LABELS=${CRITICAL_ALERTS_ALERTMANAGER_LABELS:-{}}
     expose:
-      - "${HTTP_PORT:-8080}"
+      - '${HTTP_PORT:-8080}'
     ports:
-      - "${EXTERNAL_HTTP_PORT:-${HTTP_PORT:-8080}}:${HTTP_PORT:-8080}"
+      - '${EXTERNAL_HTTP_PORT:-${HTTP_PORT:-8080}}:${HTTP_PORT:-8080}'
     volumes:
       - ./docker/validators/:/app/docker/validators
     depends_on:
