--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ethereum-validators-monitoring",
-  "version": "4.5.0",
+  "name": "catalist-validators-monitoring",
+  "version": "1.0.2",
   "main": "./dist/main.js",
   "private": true,
   "scripts": {
@@ -21,6 +21,10 @@
   "license": "MIT",
   "description": "Consensus layer validators monitoring bot, that fetches Lido or User Node Operator keys from Execution layer and checks their performance in Consensus layer by: balance delta, attestations, proposes, sync committee participation.",
   "dependencies": {
+    "@catalist-nestjs/contracts": "^1.0.0",
+    "@catalist-nestjs/execution": "^1.0.0",
+    "@catalist-nestjs/logger": "^1.0.0",
+    "@catalist-nestjs/registry": "^1.0.0",
     "@chainsafe/persistent-merkle-tree": "^0.7.1",
     "@chainsafe/ssz": "^0.9.4",
     "@clickhouse/client": "^0.0.11",
@@ -32,9 +36,6 @@
     "@ethersproject/contracts": "^5.4.0",
     "@ethersproject/providers": "^5.4.2",
     "@ethersproject/units": "^5.4.0",
-    "@lido-nestjs/execution": "^1.11.1",
-    "@lido-nestjs/logger": "^1.3.2",
-    "@lido-nestjs/registry": "^7.4.0",
     "@lodestar/types": "^1.15.1",
     "@mikro-orm/core": "^5.3.1",
     "@mikro-orm/knex": "^5.3.1",
