--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
+    user: root
     sysctls:
       - net.ipv6.conf.lo.disable_ipv6=0
       - net.ipv6.conf.all.disable_ipv6=0
@@ -76,6 +77,7 @@ services:
 
   alertmanager:
     image: prom/alertmanager:latest
+    user: root
     container_name: alertmanager
     restart: unless-stopped
     deploy:
@@ -109,6 +111,7 @@ services:
 
   grafana:
     image: grafana/grafana:9.5.7
+    user: root
     sysctls:
       - net.ipv6.conf.lo.disable_ipv6=0
       - net.ipv6.conf.all.disable_ipv6=0
